# qmicroscope

./: .gitignore  main.py  pyproject.toml
qmicroscope/: microscope.py  settings.py
qmicroscope/plugins/: base_plugin.py  click_marker_plugin.py  crosshair_plugin.py  grid_plugin.py  mask_overlay_plugin.py  mousewheel_camera_zoom.py  record_plugin.py  scale_plugin.py  square_grid.py  vector_plugin.py  zoom_plugin.py
qmicroscope/widgets/: downloader.py
