[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "qmicroscope"
description = "A camera widget for qt GUIs using qtpy"
readme = "README.md"
authors = [
    { name = "Venkateswaran (Shekar) Shekar", email = "vshekar1@bnl.gov" },
]
requires-python = ">=3.8"

dependencies = ["qtpy", "opencv-python-headless", "pillow"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "qmicroscope/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["qmicroscope"]

[tool.setuptools_scm]
root = "."
fallback_version = "0.0.0"
version_scheme = "semantic"
local_scheme = "node-and-date"
write_to = "qmicroscope/_version.py"


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
qmicroscope = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pyside6 = ">=6.11.1,<7"
requests = ">=2.34.2,<3"
pyepics = ">=3.5.9,<4"
